Fix for plugins not resizing correctly in XUL. r=peterl sr=attinasi patch by kens@activestate.com bug 77234